<resources>
    <string name="app_name">Yuummm</string>
    <string name="action_settings">Randomizer Settings</string>
    <string name="locate">Directions</string>
    <string name="go">Go!!!</string>
    <string name="share_button">Share Location</string>
    <string name="share">Share location with..</string>
    <string name="call_button">Call Location</string>
    <string name="settings">Settings</string>
    <string name="chinese">Chinese</string>
    <string name="american">American</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="mexican">Mexican</string>
    <string name="mediterranean">Greek</string>
    <string name="indian">Indian</string>
    <string name="korean">Korean</string>
    <string name="breakfast">Brunch</string>
    <string name="categories">Categories</string>
    <string name="price_range">Price Range</string>
    <string name="other_settings">Other Settings</string>
    <string name="comfort">Comfort</string>
    <string name="price">Price:</string>
    <string name="yuuummm">Yuuummm</string>
</resources>
